fixed the alignments

--- a/src/components/cardsBox/packet/style.css
+++ b/src/components/cardsBox/packet/style.css
@@ -1,13 +1,12 @@
 .packet{
-    box-sizing: border-box;
     box-sizing: content-box;
     width: 800px;
     background: #FFF756;
     border-radius: 8px 8px 0px 8px;
     align-items: center;
     margin-top: 10px;
-    
     margin-bottom: 100px;
+    margin-left: 200px;
     background-blend-mode:color-burn;
 }
 .packet__text{
@@ -24,15 +23,17 @@ margin-bottom: 50px;
 .packet__arrow{
     position: absolute;
     left: 750.22px;
+    margin-bottom: 100px;
     /*top: 147.86px;*/
     
 }
 .packet__opener {
-    width: 215px;
-    height: 5px;
+    /* width: 215px;
+    height: 45px; */
+   
     /* margin-left: 270px; */
     margin-top: 80px;
-    margin-bottom: 30px;
+    margin-bottom: 3px;
   }
 
 .packet__opener:hover{
@@ -61,8 +62,9 @@ margin-bottom: 50px;
     /*margin: 250px;*/
     margin-top: 41px;
     /*margin-left: 270px;*/
-    width: 215px;
-    height: 200px;
+    /* width: 215px;
+    height: 200px; */
+    
     /*background-color: rgb(3, 3, 32);
     color: floralwhite;*/
 }
